<resources>
    <string name="app_name">Cosapa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="topic">Popular Topic</string>
    <string name="oxygen">Oxygen Cylinder</string>
    <string name="beds">Hospital Beds</string>
    <string name="trending">Trending Post</string>
    <string name="GM">Good Morning !</string>
    <string name="username">Naaz</string>
    <string name="health_status">Your Health is Good</string>
    <string name="seedoctor">Want to consult Doctor?</string>
    <string name="seedoctor2">So why are you waiting?</string>
    <string name="resend_code_in">Resend code in </string>
    <string name="resend_code">Resend code</string>
    <string name="well_i_think">Well I think...</string>
    <string name="add_post">ADD POST</string>
    <string name="add_a_post">Add a post</string>
    <string name="post">Post</string>
    <string name="what_do_you_want_to_post">What do you want to post?</string>
    <string name="city">Add city</string>
    <string name="requirement">Add requirement</string>
    <string name="add_a_challenge">Add a Challenge</string>
    <string name="occupationgreet">Hey!</string>
    <string name="title">Title</string>
    <string name="dumble_squat">Dumble squat</string>
    <string name="steps">Steps</string>
    <string name="step_1_n_step_2_n_step_3">- Step 1\n- Step 2\n- Step 3</string>
    <string name="add_media_files">Add media / files</string>
    <string name="challenges">Challenges</string>
    <string name="challenge_image">CHALLENGE IMAGE</string>
    <string name="done">DONE</string>
    <string name="start_now">Start Now</string>
    <string name="completed">Completed</string>
    <string name="count">Count</string>
    <string name="save">Save</string>
    <string name="challenge_completed">Challenge completed</string>
    <string name="congratulations">Congratulations!</string>
    <string name="party_popper">🎉</string>
    <string name="doctor_name">Dr. Jubin Nautiyal</string>
    <string name="doctor_category">General Surgeon</string>
    <string name="doctor_price">500$</string>
    <string name="profile_picture">Profile picture</string>
    <string name="get_details">Get Details</string>
    <string name="dummytextdocdetails">Dr. Jubin Nautiyal is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="location">Location</string>
    <string name="total">Total</string>
    <string name="navigate">Navigate</string>
    <string name="lab">Lab</string>
    <string name="store">Store</string>
    <string name="order_id">Order id #2034560</string>
    <string name="confirmdocname">Consultation with Dr.Veena khan</string>
    <string name="confirmdoccat">Dermatology</string>
    <string name="confirmdocloc">Good health clinic</string>
    <string name="watch_video">Watch Video</string>
    <string name="locate_me">Locate me</string>
    <string name="note_please_wear_your_device">Note: Please wear your device</string>
    <string name="make_sure">Make sure</string>
    <string name="challenge_start_instruction">Place the device properly\nClick on "Start Now" once comfortable</string>
    <string name="_0">0</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="essentials">Essentials near you</string>

    <string name="total_rewards">Total Rewards Earned</string>
    <string name="total_rewards_value">₹ 70</string>
    <string name="rewards_value">₹ 100</string>
    <string name="rewards_value2">₹ 250</string>
    <string name="rewards_value3">₹ 50</string>
    <string name="rewards_value4">₹ 10</string>
    <string name="rewards_value5">₹ 15</string>
    <string name="profile_verification">Profile Verification</string>
    <string name="profile_verify_details">Complete your profile \nand get ₹ 100</string>
    <string name="doctor_consultation">Doctor Consultation</string>
    <string name="doctor_consultation_details">Book Consultation with\na doctor and get ₹ 100</string>
    <string name="friends_referrals_details">Invite your friends\nand earn</string>
    <string name="refer_friends">Invite Friends</string>
    <string name="challenge_completion">Complete Challenge</string>
    <string name="challenge_rewards">Accept and complete\na challenge</string>
    <string name="volunteer_work">Volunteer Help</string>
    <string name="volunteer_rewards">When you help our\ncommunity you get ₹ 15</string>
    <string name="verify">Verify</string>
    <string name="you_won">You won</string>
    <string name="cpa">CPA mean Cosapa-coins</string>
    <string name="cpa_info">1 CPA = ₹ 0.2</string>
    <string name="comment">Leave a comment</string>

    <string name="about_me">About Me</string>
    <string name="occupation">Occupation</string>
    <string name="contact">Contact</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_days">In 3 days</string>
    <string name="pay_now">Pay Now</string>
    <string name="appointment_confirm">Appointment Confirm</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="call_now">Call Now</string>
    <string name="timing_details">Timing Details</string>
    <string name="search_doctor">Search by doctor category</string>
    <string name="category_all">All</string>
    <string name="category_med">Family Medicine</string>
    <string name="category_ent">ENT</string>
    <string name="doctors">Doctors</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="heartbeat_val">80 bpm</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_val">37°C</string>
    <string name="calories_val">50 kcal</string>
    <string name="o2">O2</string>
    <string name="o2level">95 %</string>
    <string name="finish">Finish</string>
    <string name="bio">Hi! I am Naaz</string>
    <string name="country">India</string>
    <string name="select_lang">Select Preffered Language</string>
    <string name="family_medicine">Family Medicine</string>
    <string name="send_to">Send to</string>
    <string name="speech_prompt">Say Something..</string>
    <string name="speech_not_supported">Speech not supported</string>

    <string-array name="exercise_category">
        <item>Pushups</item>
        <item>Situps</item>
        <item>Squats</item>
    </string-array>
</resources>