<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPost">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_a_post"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/post"
            android:textAlignment="textEnd"
            android:textColor="#2F5FF3"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@drawable/profilepic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Hitesh Mitruka"
                android:textColor="#0B0103"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="Developer"
                android:textColor="#0B0103"
                android:textSize="13sp" />


        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@null"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="top"
        android:maxLines="10"
        android:hint="@string/what_do_you_want_to_post"
        app:layout_constraintTop_toBottomOf="@id/ll2" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:background="@null"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="top"
        android:hint="@string/city"
        android:textColor="#2F5FF3"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <EditText
        android:id="@+id/requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:background="@null"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="top"
        android:hint="@string/requirement"
        android:textColor="#2F5FF3"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/city" />

</androidx.constraintlayout.widget.ConstraintLayout>